--- a/index.html
+++ b/index.html
@@ -1,58 +1,83 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>WebStudio</title>
-</head>
-<body>
+<htlm>
+    <head lang="en">
+        <meta charset="UTF-8">
+        <title>WebStudio</title>
+    </head>
+    <body>
 
     <!--Navigation section-->
-    <section>
-        <a href="https://www.webstudio.ie/">WebStudio</a>
-        <ul>
-            <li>Studio</li>
-            <li>Portfolio</li>
-            <li>Contacts</li>
-            <li><a href="info@devstudio.com">info@devstudio.com</li>
-            <li><a href="tel:+1 212-772-4150">+1 212-772-4150</a></li>
-        </ul>
-    </section>
+        <section>
+            <a href="https://www.webstudio.ie/">WebStudio</a>
+            <ul>
+                <li>Studio</li>
+                <li>Portfolio</li>
+                <li>Contacts</li>
+                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li><a href="tel:+1 212-772-4150">+1 212-772-4150</a></li>
+            </ul>
+        </section>
 
     <!--Main title and button-->
-    <section>
-        <h1>EFFECTIVE SOLUTIONS FOR YOUR BUSINESS</h1>
-        <button type="button">Request our service</button>
-    </section>
+        <section>
+            <h1>EFFECTIVE SOLUTIONS FOR YOUR BUSINESS</h1>
+            <button type="button">Request our service</button>
+        </section>
 
     <!--About the company section-->
-    <dl>
-        <dt>ATTENTION TO DETAILS</dt>
-        <dd>We go into all the details and processes of your business to develop a customized solution.</dd>
-        <dt>PUNCTUALITY</dt>
-        <dd>With us, you can feel safe and secure. An important principle of the company: respect your time and deadlines.</dd>
-        <dt>PLANNING</dt>
-        <dd>You will be able to observe and participate in every phase of solution development and implementation.</dd>
-        <dt>MODERN TECHNOLOGIES</dt>
-        <dd>We use innovative tools to solve assigned tasks. It's time to simplify work processes.</dd>
-    </dl>
+        <dl>
+            <dt>ATTENTION TO DETAILS</dt>
+            <dd>We go into all the details and processes of your business to develop a customized solution.</dd>
+            <dt>PUNCTUALITY</dt>
+            <dd>With us, you can feel safe and secure. An important principle of the company: respect your time and deadlines.</dd>
+            <dt>PLANNING</dt>
+            <dd>You will be able to observe and participate in every phase of solution development and implementation.</dd>
+            <dt>MODERN TECHNOLOGIES</dt>
+            <dd>We use innovative tools to solve assigned tasks. It's time to simplify work processes.</dd>
+        </dl>
 
     <!--What we do section-->
-    <section>
-        <h2>What we do</h2>
-        <img src="images/img1.png" alt="imagine calculator">
-        <img src="images/img2.png" alt="imagine telefon">
-        <img src="images/img3.png" alt="imagine tabletă">
-    </section>
+        <section>
+            <h2>What we do</h2>
+            <img src="images/img1.jpg" width: 370px; height: 294px; alt="imagine calculator">
+            <img src="images/img2.jpg" width: 370px; height: 294px; alt="imagine telefon">
+            <img src="images/img3.jpg" width: 370px; height: 294px; alt="imagine tabletă">
+        </section>
 
     <!--Team section-->
-    <section>
-        <h2>Our Team</h2>
-        <dl>
-            <img src="images/christopher.jpg" alt="Christopher Walker Product Designer">
-            <dt>Christopher Walker</dt>
-            <dd>Product Designer</dd>
-        </dl>
-    </section>
+        <section>
+            <h2>Our Team</h2>
+            <ul>
+                <li>
+                    <img src="images/christopher.jpg" width: 270px; height: 260px; alt="Product Designer Christopher Walker"><br>
+                    Christopher Walker<br>Product Designer            
+                </li>
+                <li>
+                    <img src="images/kylie.jpg" width: 270px; height: 260px; alt="Frontend Developer Kylie Evans"><br>
+                    Kylie Evans<br>Frontend Developer
+                </li>
+                <li>
+                    <img src="images/ryan.jpg" width: 270px; height: 260px; alt="Marketing Specialist Ryan Harris"><br>
+                    Ryan Harris<br>Marketing
+                </li>
+                <li>
+                    <img src="images/tyler.jpg" width: 270px; height: 260px; alt="UI Designer Tyler Moore"><br>
+                    Tyler Moore<br>UI Designer
+                </li>
+            </ul>
+        </section>
 
-</body>
+    <!--Footer section-->
+        <footer>
+            <nav>
+                <a href="https://www.webstudio.ie/">WebStudio</a>
+                <address>
+                    <p>695 Park Ave, NY 10065, USA</p>
+                    <p><a href="mailto:info@devstudio.com">info@devstudio.com</a></p>
+                    <p><a href="tel:+1 212-772-4150">+1 212-772-4150</a></p>
+                </address>
+            </nav>
+        </footer>
+
+    </body>
 </html>
