--- a/index.html
+++ b/index.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
-<htlm>
-    <head lang="en">
+<html lang="en">
+    <head>
         <meta charset="UTF-8">
         <title>WebStudio</title>
     </head>
     <body>
 
     <!--Navigation section-->
-        <section>
+        <div>
             <a href="https://www.webstudio.ie/">WebStudio</a>
             <ul>
                 <li>Studio</li>
                 <li>Portfolio</li>
                 <li>Contacts</li>
                 <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a href="tel:+1 212-772-4150">+1 212-772-4150</a></li>
+                <li><a href="tel:+1212-772-4150">+1 212-772-4150</a></li>
             </ul>
-        </section>
+        </div>
 
     <!--Main title and button-->
         <section>
@@ -39,9 +39,9 @@
     <!--What we do section-->
         <section>
             <h2>What we do</h2>
-            <img src="images/img1.jpg" width: 370px; height: 294px; alt="imagine calculator">
-            <img src="images/img2.jpg" width: 370px; height: 294px; alt="imagine telefon">
-            <img src="images/img3.jpg" width: 370px; height: 294px; alt="imagine tabletă">
+            <img src="images/img1.jpg" width="370" height="294" alt="imagine calculator">
+            <img src="images/img2.jpg" width="370" height="294" alt="imagine telefon">
+            <img src="images/img3.jpg" width="370" height="294" alt="imagine tabletă">
         </section>
 
     <!--Team section-->
@@ -49,19 +49,19 @@
             <h2>Our Team</h2>
             <ul>
                 <li>
-                    <img src="images/christopher.jpg" width: 270px; height: 260px; alt="Product Designer Christopher Walker"><br>
+                    <img src="images/christopher.jpg" width="270" height="260" alt="Product Designer Christopher Walker"><br>
                     Christopher Walker<br>Product Designer            
                 </li>
                 <li>
-                    <img src="images/kylie.jpg" width: 270px; height: 260px; alt="Frontend Developer Kylie Evans"><br>
+                    <img src="images/kylie.jpg" width="270" height="260" alt="Frontend Developer Kylie Evans"><br>
                     Kylie Evans<br>Frontend Developer
                 </li>
                 <li>
-                    <img src="images/ryan.jpg" width: 270px; height: 260px; alt="Marketing Specialist Ryan Harris"><br>
+                    <img src="images/ryan.jpg" width="270" height="260" alt="Marketing Specialist Ryan Harris"><br>
                     Ryan Harris<br>Marketing
                 </li>
                 <li>
-                    <img src="images/tyler.jpg" width: 270px; height: 260px; alt="UI Designer Tyler Moore"><br>
+                    <img src="images/tyler.jpg" width="270" height="260" alt="UI Designer Tyler Moore"><br>
                     Tyler Moore<br>UI Designer
                 </li>
             </ul>
@@ -74,7 +74,7 @@
                 <address>
                     <p>695 Park Ave, NY 10065, USA</p>
                     <p><a href="mailto:info@devstudio.com">info@devstudio.com</a></p>
-                    <p><a href="tel:+1 212-772-4150">+1 212-772-4150</a></p>
+                    <p><a href="tel:+1212-772-4150">+1 212-772-4150</a></p>
                 </address>
             </nav>
         </footer>
